# hydro_pi

./: .gitignore  .tool-versions  aws_iot.py  awsiot.py  dht_testing.py  pyproject.toml  run_task.sh
aws_iot/: dht_testing.py  ds18b20.py  ds18b20_test.py
