[tool.poetry]
name = "aws-iot"
version = "0.1.0"
description = "Raspberri Pi with sensors and sending data to AWS IOT via MQTT"
authors = ["Zack Castaneda <zcastaneda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.1"
rpi-gpio = "^0.7.1"
logging = "^0.4.9.6"
adafruit-seesaw = "^1.0"
awsiotpythonsdk = "^1.5.2"
adafruit-circuitpython-dht = "^3.7.8"
adafruit-blinka = "^8.7.0"
adafruit-circuitpython-onewire = "^2.0.3"
adafruit-circuitpython-ds18x20 = "^1.3.16"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
